--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,3 +1,11 @@
+name: Deploy Nginx
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
